--- a/index.html
+++ b/index.html
@@ -7,10 +7,33 @@
   <title>Fresh Flowers</title>
   <link rel="stylesheet" href="./css/style.css">
   <link rel="stylesheet" href="./css/responsive.css">
+  <script src="https://kit.fontawesome.com/de507ef0dc.js" crossorigin="anonymous"></script>
+
+
 </head>
 
 <body>
-
+  <header class="container">
+    <!-- nav area start -->
+    <nav class="main-nav display-flex">
+      <div class="nav-logo">
+        <img src="./assets/logo.png" alt="website logo">
+      </div>
+      <div class="nav-right display-flex">
+        <div>
+          <ul class="nav-link display-flex">
+            <li><a href="">Home</a></li>
+            <li><a href="">Shop</a></li>
+            <li><a href="">About Us</a></li>
+          </ul>
+        </div>
+        <div class="cart-icon">
+          <span><i class="fa-solid fa-cart-shopping"></i> Cart(56$)</span>
+        </div>
+      </div>
+    </nav>
+    <!-- banner area Start -->
+  </header>
 </body>
 
 </html>
