added hero area

--- a/index.html
+++ b/index.html
@@ -33,6 +33,17 @@
       </div>
     </nav>
     <!-- banner area Start -->
+    <div class="banner display-flex">
+      <div class="left-banner-area">
+        <h2>ALWAYS <span class="orange-text">FRESH</spa> <br><Span class="orange-text">FLOWERS</Span></h2>
+        <p>Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic
+          blooms, we
+          offer a wide variety of fresh flowers that are perfect for any occasion.</p>
+      </div>
+      <div class="image-area">
+        <img src="./assets/hero-flower.png" alt="banner flower image">
+      </div>
+    </div>
   </header>
 </body>
 
