added Plants Section

--- a/index.html
+++ b/index.html
@@ -45,6 +45,69 @@
       </div>
     </div>
   </header>
+  <!-- main area start -->
+  <main>
+    <!-- plant area -->
+    <section class="plants-area container">
+      <div class="top-text-area text-center">
+        <h3><span class="orange-text">Our</span> Plants</h3>
+        <p>Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic
+          blooms, we
+          offer a wide variety of fresh.</p>
+      </div>
+      <div class="plants">
+        <div class="plant-card text-center">
+          <img src="./assets/sample-flower-image.png" alt="">
+          <h5>Lily Blissom</h5>
+          <span>20 USD</span>
+          <button class="btn-prinary">ADD TO CART</button>
+        </div>
+        <div class="plant-card text-center">
+          <img src="./assets/sample-flower-image.png" alt="">
+          <h5>Lily Blissom</h5>
+          <span>20 USD</span>
+          <button class="btn-prinary">ADD TO CART</button>
+        </div>
+        <div class="plant-card text-center">
+          <img src="./assets/sample-flower-image.png" alt="">
+          <h5>Lily Blissom</h5>
+          <span>20 USD</span>
+          <button class="btn-prinary">ADD TO CART</button>
+        </div>
+        <div class="plant-card text-center">
+          <img src="./assets/sample-flower-image.png" alt="">
+          <h5>Lily Blissom</h5>
+          <span>20 USD</span>
+          <button class="btn-prinary">ADD TO CART</button>
+        </div>
+        <div class="plant-card text-center">
+          <img src="./assets/sample-flower-image.png" alt="">
+          <h5>Lily Blissom</h5>
+          <span>20 USD</span>
+          <button class="btn-prinary">ADD TO CART</button>
+        </div>
+        <div class="plant-card text-center">
+          <img src="./assets/sample-flower-image.png" alt="">
+          <h5>Lily Blissom</h5>
+          <span>20 USD</span>
+          <button class="btn-prinary">ADD TO CART</button>
+        </div>
+        <div class="plant-card text-center">
+          <img src="./assets/sample-flower-image.png" alt="">
+          <h5>Lily Blissom</h5>
+          <span>20 USD</span>
+          <button class="btn-prinary">ADD TO CART</button>
+        </div>
+        <div class="plant-card text-center">
+          <img src="./assets/sample-flower-image.png" alt="">
+          <h5>Lily Blissom</h5>
+          <span>20 USD</span>
+          <button class="btn-prinary">ADD TO CART</button>
+        </div>
+      </div>
+    </section>
+  </main>
+
 </body>
 
 </html>
