added Plants Lover Section

--- a/index.html
+++ b/index.html
@@ -106,6 +106,26 @@
         </div>
       </div>
     </section>
+    <!-- Flower & Plants Lover area -->
+    <section class="plants-lover container display-flex">
+      <div class="left-image-area">
+        <img src="./assets/flower-store.png" alt="Flower Store image">
+      </div>
+      <div class="right-side-textarea">
+        <h2>Flower & Plants <br> Lover</h2>
+        <ul>
+          <li>Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic
+            blooms, we
+            offer a wide variety of fresh.</li>
+          <li>Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic
+            blooms, we
+            offer a wide variety of fresh.</li>
+          <li>Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic
+            blooms, we
+            offer a wide variety of fresh.</li>
+        </ul>
+      </div>
+    </section>
   </main>
 
 </body>
