added Join the colorful Bunch section

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Fresh Flowers</title>
+  <link rel="shortcut icon" href="./assets/flower-shop-favicon.png" type="image/x-icon">
   <link rel="stylesheet" href="./css/style.css">
   <link rel="stylesheet" href="./css/responsive.css">
   <script src="https://kit.fontawesome.com/de507ef0dc.js" crossorigin="anonymous"></script>
@@ -110,6 +111,9 @@
     <section class="plants-lover container display-flex">
       <div class="left-image-area">
         <img src="./assets/flower-store.png" alt="Flower Store image">
+        <div class="trusted-badge">
+          <img src="./assets/trusted-badge.png" alt="">
+        </div>
       </div>
       <div class="right-side-textarea">
         <h2>Flower & Plants <br> Lover</h2>
@@ -126,7 +130,27 @@
         </ul>
       </div>
     </section>
+    <!--  Latest Deals Start -->
+    <section class="deals container">
+      <h2 class="text-center"><span class="orange-text"> Latest</span> Deals</h2>
+      <p class="text-center top-text-area">Indulge your senses with the beauty and fragrance of our fresh flower shop.
+        From classic
+        roses to exotic
+        blooms, we
+        offer a wide variety of fresh.</p>
+    </section>
+    <!-- Join the colorful Bunch Start -->
+    <section id="join-section">
+      <h2 class="text-center">Join the colorful Bunch</h2>
+      <div class="subscribe-area text-center">
+        <input type="email" name="" id="" placeholder="Write email">
+        <button>Subscribe</button>
+      </div>
+    </section>
+
   </main>
+  <!-- footer Section -->
+
 
 </body>
 
