added footer section

--- a/index.html
+++ b/index.html
@@ -150,7 +150,37 @@
 
   </main>
   <!-- footer Section -->
+  <footer class="display-flex">
+    <div id="footer-text">
+      <img src="./assets/logo.png" alt="website logo">
+      <p>Indulge your senses with the beauty and fragrance of our fresh flower shop.</p>
+    </div>
+    <div class="footer-link">
+      <ul>
+        <li><a href="">Home</a></li>
+        <li><a href="">About Us</a></li>
+        <li><a href="">Blog</a></li>
+        <li><a href="">FAQ</a></li>
+        <li><a href="">Contact US</a></li>
+      </ul>
 
+    </div>
+    <div class="footer-link">
+      <ul>
+        <li><a href="">Features</a></li>
+        <li><a href="">Pricing</a></li>
+        <li><a href="">Privacy Policy</a></li>
+        <li><a href="">Terms of Service</a></li>
+        <li><a href="">Help Center</a></li>
+      </ul>
+    </div>
+    <div class="footer-logo-area display-flex">
+      <img src="./assets/icon-linkedin.png" alt="LInkedin logo">
+      <img src="./assets/icon-twitter.png" alt="twitter logo">
+      <img src="./assets/icon-facebook.png" alt="Facebook logo">
+      <img src="./assets/icon-youtube.png" alt="Youtube logo">
+    </div>
+  </footer>
 
 </body>
 
