added Latest  Deals Section

--- a/index.html
+++ b/index.html
@@ -138,6 +138,23 @@
         roses to exotic
         blooms, we
         offer a wide variety of fresh.</p>
+      <section id="promo-area" class="display-flex" style="margin-bottom: 50px;">
+        <div class="deal-column-left">
+          <div class="promo-box bloom-plant-dis">
+            <h4>60% Off | Bloom Plant</h4>
+            <p><a href="#">Shop Now</a></p>
+          </div>
+          <div class="promo-box ana-plant-dis">
+            <h4>60% Off | Ana Plant</h4>
+            <p><a href="#">Shop Now</a></p>
+          </div>
+        </div>
+
+        <div class="promo-box zabo-plant-dis">
+          <h3>25% Off | Zabo Plant</h3>
+          <p><a href="#">Shop Now</a></p>
+        </div>
+      </section>
     </section>
     <!-- Join the colorful Bunch Start -->
     <section id="join-section">
