--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
         roses to exotic
         blooms, we
         offer a wide variety of fresh.</p>
-      <section id="promo-area" class="display-flex" style="margin-bottom: 50px;">
+      <section id="promo-area" class="display-flex2" style="margin-bottom: 50px;">
         <div class="deal-column-left">
           <div class="promo-box bloom-plant-dis">
             <h4>60% Off | Bloom Plant</h4>
